--- a/src/components/Hand.css
+++ b/src/components/Hand.css
@@ -1,66 +1,74 @@
 .hand-container {
-    position: fixed;
-    margin-left: 3vw;
-    width: 50vw;
-    bottom: -70%;
-    transition: bottom 0.5s ease;
-  }
-  
-  .hover-area {
-    width: 30vw;
-    height: 18vw;
-    position: absolute;
-    bottom: -10%;
-    left: 15%;
-    z-index: 20;
-    cursor: pointer;
-  }
-  
-  .hand-container.raised {
-    bottom: -45%;
-  }
+  position: fixed;
+  margin-left: 3vw;
+  width: 50vw;
+  bottom: -70%;
+  transition: bottom 0.5s ease, transform 0.5s ease;
+}
 
-  .hover-border {
-    border: 2px solid purple;
-  }
+.hover-area {
+  width: 30vw;
+  height: 18vw;
+  position: absolute;
+  bottom: -10%;
+  left: 15%;
+  z-index: 20;
+  cursor: pointer;
+}
 
-  .cards {
-    position: absolute;
-    bottom: 75%;
-    margin-left: 32vw;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: center;
-    width: 30vw;
-    height: auto;
-    z-index: 2;
-  }
-  
-  .card {
-    position: absolute;
-    width: 15vw;
-    height: auto;
-    transform-origin: bottom center;
-    transition: transform 0.25s ease, z-index 0.5s ease;
-    cursor: pointer;
+.hand-container.raised {
+  bottom: -45%;
+}
 
-  }
+.cards {
+  position: absolute;
+  bottom: 75%;
+  margin-left: 32vw;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  width: 30vw;
+  height: auto;
+  z-index: 2;
+}
 
-  .hand {
-    position: relative;
-    width: 100%;
-    height: auto;
-    z-index: 1;
-  }
-  
-  .thumb {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    z-index: 3;
-    bottom: 3%;
-    left: 46%;
-    pointer-events: none;
-    transform: translateX(-50%);
-  }
-  
+.card {
+  position: absolute;
+  width: 15vw;
+  height: auto;
+  transform-origin: bottom center;
+  transition: transform 0.25s ease, z-index 0.5s ease;
+  cursor: pointer;
+}
+
+.hand {
+  position: relative;
+  width: 100%;
+  height: auto;
+  z-index: 1;
+}
+
+.thumb {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  z-index: 3;
+  bottom: 3%;
+  left: 46%;
+  pointer-events: none;
+  transform: translateX(-50%);
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 2;
+  opacity: 0;
+  display: block;
+  pointer-events: none;
+  transition: opacity 0.8s ease;
+}
