--- a/src/components/Hand.css
+++ b/src/components/Hand.css
@@ -37,7 +37,7 @@
   width: 15vw;
   height: auto;
   transform-origin: bottom center;
-  transition: transform 0.25s ease, z-index 0.5s ease;
+  transition: transform 0.25s ease, z-index 1.5s ease;
   cursor: pointer;
 }
 
@@ -50,23 +50,37 @@
 
 .thumb {
   position: absolute;
-  width: 100%;
+  width: 88vh;
   height: auto;
   z-index: 3;
-  bottom: 3%;
-  left: 46%;
+  bottom: -87vh;
+  left: 18%;
   pointer-events: none;
   transform: translateX(-50%);
 }
 
-.overlay {
+.overlay-bottom {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 2;
+  top: 10%;
+  margin-left: 30vw;
+  width: 100vw;
+  height: 200vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 4;
+  opacity: 0;
+  display: block;
+  pointer-events: none;
+  transition: opacity 0.8s ease;
+}
+
+.overlay-top{
+  position: fixed;
+  bottom: 10%;
+  margin-left: 30vw;
+  width: 100vw;
+  height: 200vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 4;
   opacity: 0;
   display: block;
   pointer-events: none;
