--- a/src/components/Hand.css
+++ b/src/components/Hand.css
@@ -29,6 +29,7 @@
   justify-content: center;
   width: 30vw;
   height: auto;
+  transition: scale3d 3s ease;
   z-index: 2;
 }
 
@@ -37,15 +38,28 @@
   width: 15vw;
   height: auto;
   transform-origin: bottom center;
-  transition: transform 0.25s ease, z-index 1.5s ease;
+  transition: transform 0.25s ease, z-index 1.5s ease, scale3d 3s ease;
   cursor: pointer;
+  perspective: 2000px; /* Enable perspective */
 }
 
-.card.selected {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+.card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
   background: linear-gradient(-45deg, red, blue);
-  filter: blur(15px);
-  opacity: 0.5;
+  z-index: 1;
+  transform: translateZ(-50px);
+  opacity: 1;
+  transition: opacity 0.25s ease;
+}
+
+.card.selected::before {
+  opacity: 1.0;
 }
 
 .hand {
