--- a/src/components/Hand.css
+++ b/src/components/Hand.css
@@ -27,22 +27,10 @@
     transform: rotateY(0deg) translateY(0);
   }
   25% {
-    transform: rotateY(900deg) translateY(3vh);
+    transform: rotateY(540deg) translateY(5vh);
   }
   100% {
-    transform: rotateY(1800deg) translateY(-100vh);
-  }
-}
-
-@keyframes flipShadow {
-  0% {
-    transform: rotateY(0deg) translateY(-10vw) translateX(-10vw);
-  }
-  25% {
-    transform: rotateY(900deg) translateY(-7vw) translateX(-10vw);
-  }
-  100% {
-    transform: rotateY(1800deg) translateY(-100vh) translateX(-10vw);
+    transform: rotateY(1200deg) translateY(-100vh);
   }
 }
 
@@ -64,8 +52,7 @@
   position: absolute;
   perspective-origin: center;
   transform-style: preserve-3d;
-  /* animation:cubic-bezier(0.4, -0.28, 0.735, 0.050); */
-  animation: cubic-bezier(0.68, -0.55, 0.27, 1.55);
+  animation: ease-in-out;
   width: 15vw;
   height: auto;
   transform-origin: bottom center;
@@ -99,7 +86,7 @@
   height: 25vw;
   left: var(--mouse-x);
   top: var(--mouse-y);
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) translateZ(-80px);
   opacity: 0;
   border-radius: 50%;
   pointer-events: none;
