first version of page titles

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -8,7 +8,7 @@ body, html {
 }
 
 .home {
-    background-image: url('../../public/images/16by9Version.png');
+    background-image: url('../../public/images/squashed vers2.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
