--- a/src/components/Hand.css
+++ b/src/components/Hand.css
@@ -1,3 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
+
+:root {
+  --brand-primary: #44D688;
+  --font-family-display: Monoton, Arial, sans-serif;
+  --font-family-primary: 'Rubik', Arial, sans-serif;
+  --neon-effect: 0 0 0 transparent,
+    0 0 20px rgb(255, 0, 0),
+    0 0 50px rgba(255, 0, 0, .5),
+    0 0 200px rgba(255, 0, 0, .5),
+    0 0 250px rgba(255, 0, 0, 1),
+    0 0 300px rgba(255, 0, 0, 1),
+    -250px -100px 100px rgba(255, 0, 0, 1);
+}
+
+@keyframes neon-blink {
+  44% {
+    opacity: 1;
+  }
+  
+  45% {
+    opacity: .7;
+  }
+  
+  46% {
+    opacity: 1;
+  }
+  
+  98% {
+    opacity: 1;
+  }
+  
+  99% {
+    opacity: .5;
+  }
+  
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes flip {
+  0% {
+    transform: rotateY(0deg) translateY(0);
+  }
+  25% {
+    transform: rotateY(540deg) translateY(5vh);
+  }
+  100% {
+    transform: rotateY(1200deg) translateY(-100vh);
+  }
+}
+
+.title {
+  position: absolute;
+  margin-top: 9vw;
+  margin-left: 33vw;
+  transform: translateX(-50%);
+  opacity: 1;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  font-size: 7vw;
+  color: pink;
+  text-shadow: var(--neon-effect);
+  z-index: 1;
+  animation: neon-blink 5s infinite alternate;
+  font-family: var(--font-family-display);
+}
+
+
 .hand-container {
   position: fixed;
   perspective-origin: center;
@@ -34,6 +103,19 @@
   }
 }
 
+.shadow-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background: rgba(0, 0, 0, 0.8);
+  opacity: .8;
+  transition: opacity 0.5s ease;
+  z-index: 0;
+  pointer-events: none; /* Ensure it doesn't block interactions */
+}
+
 .cards {
   perspective-origin: center;
   position: absolute;
@@ -63,6 +145,11 @@
   z-index: 2;
   pointer-events: auto;
   border-radius: 15px;
+}
+
+
+.card:hover + .title {
+  opacity:1;
 }
 
 .card-container {
