--- a/src/components/Hand.css
+++ b/src/components/Hand.css
@@ -13,7 +13,53 @@
     -250px -100px 100px rgba(255, 0, 0, 1);
 }
 
+@keyframes flicker {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 1;
+  }
+  85% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 1;
+  }
+  95% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @keyframes neon-blink {
+  0% {
+    opacity: 1;
+  }
+
+  4% {
+    opacity: 1;
+  }
+
+  5% {
+    opacity: .8;
+  }
+
+  6% {
+    opacity: 1;
+  }
+
   44% {
     opacity: 1;
   }
@@ -53,19 +99,26 @@
 
 .title {
   position: absolute;
-  margin-top: 9vw;
+  margin-top: 7.5vw;
   margin-left: 33vw;
   transform: translateX(-50%);
-  opacity: 1;
+  opacity: 0;
   transition: opacity 0.3s ease, transform 0.3s ease;
-  font-size: 7vw;
+  font-size: 10vw; /* Use viewport width for responsive font size */
   color: pink;
   text-shadow: var(--neon-effect);
-  z-index: 1;
-  animation: neon-blink 5s infinite alternate;
+  z-index: 10; /* Ensure the title is on top */
+  pointer-events: none;
   font-family: var(--font-family-display);
 }
 
+.title.flicker {
+  animation: flicker 1s forwards; /* Play flicker animation once */
+}
+
+.title.neon-blink {
+  animation: neon-blink 5s infinite alternate; /* Play neon-blink animation indefinitely */
+}
 
 .hand-container {
   position: fixed;
@@ -74,6 +127,10 @@
   width: 50vw;
   bottom: -70%;
   transition: bottom 0.5s ease, transform 0.5s ease;
+}
+
+.hand-container.raised {
+  bottom: -45%;
 }
 
 .hover-area {
@@ -87,29 +144,13 @@
   cursor: pointer;
 }
 
-.hand-container.raised {
-  bottom: -45%;
-}
-
-@keyframes flip {
-  0% {
-    transform: rotateY(0deg) translateY(0);
-  }
-  25% {
-    transform: rotateY(540deg) translateY(5vh);
-  }
-  100% {
-    transform: rotateY(1200deg) translateY(-100vh);
-  }
-}
-
 .shadow-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 50%;
-  background: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1.0) 0%, rgba(0, 0, 0, 0.1) 100%);
   opacity: .8;
   transition: opacity 0.5s ease;
   z-index: 0;
@@ -146,7 +187,6 @@
   pointer-events: auto;
   border-radius: 15px;
 }
-
 
 .card:hover + .title {
   opacity:1;
