--- a/src/css/guestBook.css
+++ b/src/css/guestBook.css
@@ -1,3 +1,11 @@
+:root {
+    --dash-size: 5px;
+    --theme-color: mediumseagreen;
+    --fill-color: rgb(133, 101, 60);
+    --lighten-theme-color: #8fdcb3; /* lighten(mediumseagreen, 20%) */
+    --darken-theme-color: #2e8b57; /* darken(mediumseagreen, 20%) */
+  }
+
 .guestBook {
     background-image: url('../../public/images/background1.png');
     background-size: cover;
@@ -8,41 +16,157 @@
     width: 100%;
 }
 
-.map-wrapper {
-    position: relative;
-    width: 70%;
+.question-mark-wrapper {
+    position: absolute;
+    content: '';
+    width: 10%;
+    height: 30%;
+    top: 40%;
+    left: 6%;
+    filter: blur(10px);
+    opacity: 1;
+}
+
+.question-mark-wrapper:hover {
+    filter: blur(0px);
+    transition: filter 0.3s;
+}
+
+.question-mark-wrapper::before {
+    position: absolute;
+    content: '';
+    transition: opacity 0.5s;
+    width: 100%;
     height: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    filter: blur(40px);
+    background-image: radial-gradient(circle, #f0f0f0, #d0d0d0, #f0f0f0);
+    opacity: .1;
+    border-radius: 50%;
+}
+
+.question-mark-wrapper:hover::before {
+    opacity: .2;
+    transition: transform 0.3s, opacity 0.3s, filter 0.3s;
+}
+
+.question-mark {
+    width: 90%;
+    height: 100%;
+    opacity: .8;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+    transition: transform .5s,
+}
+
+.question-mark:hover {
+    transform: scale(1.1);
+    opacity: 1;
+    filter: brightness(1.2);
+    transition: transform 0.3s, opacity 0.3s, filter 0.3s;
+}
+
+.pin-menu {
+    position: absolute;
+    width: 20%;
+    height: 50%;
     display: flex;
     flex-direction: column;
-    /* border: 2px solid blue; */
+    top: 24%;
+    left: 77%;
+}
+
+.message-inputz {
+    border: 1px solid #ccc;
+    font-size: 1.25rem;
+    color: #fff;
+    text-align: left;
+    margin-left: 5%;
+    margin-top: 8%;
+    margin-bottom: 5%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 1.2;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    height: 60%;
+    width: 90%;
+    z-index: 2;
+}
+
+.mw-khrom {
+    width: 58%;
+    height: 73%;
+    margin-top: 9%;
+    margin-left: 18%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.map-container {
-    /* border: 9px solid red; */
-    width: 90vh;
-    height: 63vh;
+.page-title {
+    position: absolute;
+    content: '';
+    width: 25%;
+    height: 11%;
+    top: 7%;
     display: flex;
-    border-radius: 20px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 10;
+}
+
+.map-wrapper {
+    /* opacity: 0; */
+    position: relative;
+    width: 90%;
+    border: 2px solid red;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding: 7px;
+    background: var(--lighten-theme-color);
+    border: var(--dash-size) dashed var(--theme-color);
+    box-shadow: 
+      0 0 0 calc(var(--dash-size) / 2) var(--darken-theme-color),
+      0 0 0 calc(var(--dash-size) * 2.5) #619668,
+      inset 0 0 0 calc(var(--dash-size) / 2) var(--darken-theme-color),
+      0 var(--dash-size) calc(var(--dash-size) * 2) calc(var(--dash-size) * 3) rgba(0, 0, 0, 0.5),
+      inset 0 0 0 calc(var(--dash-size) * 1.2) #532b06,
+      inset 0 0 100vw 100vw var(--fill-color);
+    color: var(--theme-color);
+    font-family: Marcellus, serif;
+    font-size: 3em;
+    text-shadow: 0 2px #fff;
+    text-align: center;
+    border-radius: 10px;
+    }
+
+
+.map-container {
+    width: 96%;
+    height: 95%;
+    display: flex;
+    border-radius: 10px;
+    opacity: 1;
+
 }
 
 .map-container.pin-mode {
     cursor: crosshair;
 }
 
-.map-button-container {
-    /* border: 2px solid rgb(0, 219, 55); */
-    display: flex;
-    gap: 4vw;
-}
-
 .map-button {
     margin: 10px;
     padding: 10px;
+    font-size: 1.2rem;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -58,3 +182,4 @@
     top: 20%;
     left: 70%;
 }
+
