--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -7,3 +7,31 @@
     height: 100vh;
     width: 100%;
 }
+
+.blog-list {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 2px solid red;
+    width: 50%;
+    height: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.blog-card {
+    width: 10vw;
+    height: 10vw;
+    background-color: rgba(255, 255, 255, 0.5);
+    pointer-events: auto;
+    cursor: pointer;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
