--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 2px solid red;
+    border: 2px solid olive;
     width: 50%;
     height: 50%;
     top: 50%;
@@ -24,7 +24,7 @@
 .blog-card {
     width: 10vw;
     height: 10vw;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(66, 66, 66, 0.808);
     pointer-events: auto;
     cursor: pointer;
     border-radius: 10px;
