--- a/src/components/CardTilt.css
+++ b/src/components/CardTilt.css
@@ -1,23 +1,25 @@
 .rotating-card-container {
     position: relative;
-    display: inline-block;
+    width: 12vw;
+    height: 12vw;
+    margin: 15px;
   }
   
   .rotating-card {
     position: relative;
     z-index: 2;
     transition: transform 60ms ease;
-    /* border: 2px solid green; */
-    width: 12vw;
-    display: flex;
+    width: 100%;
+    height: 100%;
+    margin: 0;
   }
   
   .background-shadow {
     position: absolute;
     top: 1.5vw;
     left: 1vw;
-    width: 11vw;
-    height: 11vw;
+    width: 12vw;
+    height: 12vw;
     background: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     z-index: 1;
