--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -1,3 +1,11 @@
+:root {
+    --orange-background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    --blue-background-image: linear-gradient(120deg, #65bcf6 0%, #85fda3 100%);
+    --green-background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    --title-date: 'te';
+}
+
+
 .blog {
     background-image: url('../../public/images/background1.png');
     background-size: cover;
@@ -9,29 +17,72 @@
 }
 
 .blog-list {
+    /* border: 2px solid orange; */
     position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border: 2px solid olive;
-    width: 50%;
-    height: 50%;
+    height: 80vh;
+    width: 55%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: grid;
+    align-content: start;
+    grid-template-columns: repeat(auto-fill, minmax(12vw, 1fr));
+    overflow-y: auto;
+    overflow-x: hidden;
+    gap: 1%;
+    padding: 20px;
+}
+
+.blog-list::before {
+    /* border: 2px solid pink; */
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: var(--blog-list-height);
+    /* height: 80vh; */
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 0;
 }
 
 .blog-card {
-    width: 10vw;
-    height: 10vw;
-    background-color: rgba(66, 66, 66, 0.808);
+    width: 12vw;
+    height: 12vw;
+    background-image: var(--blue-background-image);
     pointer-events: auto;
     cursor: pointer;
     border-radius: 10px;
-    padding: 10px;
-    margin: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+} 
+
+.blog-card::after {
+    position: absolute;
+    background-color: rgba(66, 66, 66, 0.808);
+    height: 90%;
+    width: 90%;
+    opacity: .5;
+    background-image: url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExY2pjeXNpMWZrdmR5NGlxNG5wdW13YjJjZmk1dHE5MTg5Z2t1eTVnMyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Rlwz4m0aHgXH13jyrE/giphy.webp');
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+    content: '';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 1.5rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+}
+
+.blog-card-content {
+    position: relative;
+    padding: 10%;
+    z-index: 10;
+    color: white;
 }
