--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -48,6 +48,7 @@
 }
 
 .blog-card {
+    /* border: 2px solid green; */
     width: 12vw;
     height: 12vw;
     background-image: var(--blue-background-image);
@@ -61,6 +62,7 @@
 } 
 
 .blog-card-image {
+    /* border: 2px solid red; */
     position: relative;
     height: 90%;
     width: 90%;
@@ -69,14 +71,19 @@
     background-repeat: no-repeat;
     border-radius: 10px;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .blog-card-content {
-    width: 60%;
-    height: 60%;
-    position: absolute;
+
+    /* border: 2px solid purple; */
+
+    position: relative;
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     padding: 10%;
     z-index: 10;
