--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,5 +1,5 @@
 .about {
-    background-image: url('../../public/images/background1.png');
+    background-image: url('../../public/images/finalBackgroundgreen.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -76,7 +76,7 @@
 }
 
 .about-text {
-    font-size: 1.25vw;
+    font-size: 1.15vw;
     color: #fff;
     text-align: left;
     position: absolute;
@@ -86,10 +86,12 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 1.5;
     padding: 10px;
+    padding-top: 30px;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.2); 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    text-align: center;
 }
 
 .profile-links {
