--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -1,13 +1,14 @@
 :root {
-    --orange-background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
     --blue-background-image: linear-gradient(120deg, #65bcf6 0%, #85fda3 100%);
-    --green-background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
-    --title-date: 'te';
+    --green-background-image: linear-gradient(120deg,  #1ef249 0%, #f21ec7 100%);
+    --purple-background-image: linear-gradient(120deg, #462857 0%, #9864ec 100%);
+    --orange-background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    --red-background-image: linear-gradient(120deg, #ff2d2d 0%, #ffa163 100%);
 }
 
 
 .blog {
-    background-image: url('../../public/images/finalBackgroundgreen.png');
+    background-image: linear-gradient(rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.3) 100%), url('../../public/images/finalBackgroundgreen.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -17,7 +18,6 @@
 }
 
 .blog-list {
-    /* border: 2px solid orange; */
     position: absolute;
     height: 80vh;
     width: 55%;
@@ -34,21 +34,18 @@
 }
 
 .blog-list::before {
-    /* border: 2px solid pink; */
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: var(--blog-list-height);
-    /* height: 80vh; */
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 0;
 }
 
 .blog-card {
-    /* border: 2px solid green; */
     width: 12vw;
     height: 12vw;
     background-image: var(--blue-background-image);
@@ -62,7 +59,6 @@
 } 
 
 .blog-card-image {
-    /* border: 2px solid red; */
     position: relative;
     height: 90%;
     width: 90%;
@@ -74,9 +70,6 @@
 }
 
 .blog-card-content {
-
-    /* border: 2px solid purple; */
-
     position: relative;
     width: 100%;
     height: 80%;
